tests/errors/operators/negative_shifts.out
Error in tests/errors/operators/negative_shifts.sad:
[E5001] Traceback (most recent call last):
  File tests/errors/operators/negative_shifts.sad, line 2, in <program>
    show(1 << -1)
              ^^
IllegalOperationError: Negative shift count
